# covid-sim

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  LICENSE.md  NOTICE.md  README.md  _bin_i_o_8cpp.html  _bin_i_o_8cpp__incl.map  _bin_i_o_8cpp__incl.md5  _bin_i_o_8cpp_source.html  _bin_i_o_8h.html  _bin_i_o_8h__dep__incl.map  _bin_i_o_8h__dep__incl.md5  _bin_i_o_8h_source.html  _bitmap_8cpp.html  _bitmap_8cpp__incl.map  _bitmap_8cpp__incl.md5  _bitmap_8cpp_source.html  _bitmap_8h.html  _bitmap_8h__dep__incl.map  _bitmap_8h__dep__incl.md5  _bitmap_8h__incl.map  _bitmap_8h__incl.md5  _bitmap_8h_source.html  _calc_inf_susc_8cpp.html  _calc_inf_susc_8cpp__incl.map  _calc_inf_susc_8cpp__incl.md5  _calc_inf_susc_8cpp_source.html  _calc_inf_susc_8h.html  _calc_inf_susc_8h__dep__incl.map  _calc_inf_susc_8h__dep__incl.md5  (+314 more)
.github/workflows/: build_pub_docker.yml  clang-format.yml  doxygen.yml  linux_distribution_check.yml  macos_distribution_check.yml  windows_distribution_check.yml
Rscripts/: CompareRuns.R  CompareScenarios.R  MakeParamFiles.R  MakeSeverityProgressionICDFs.R  PlotRuns.R  PlotsSpatial.R  README.md  ReadCompareParamFiles.R
Rscripts/SourceFiles/: MakeAndWriteParamList.R  MakeParamList.R  MakePreParamList.R  WriteParamList.R
binder/: apt.txt  environment.yml  postBuild
ci/: install_dependencies.sh  install_macos_dependencies.sh
data/: README.md  run_many.py  run_sample.py  test-config.json
data/admin_units/: Alabama_admin.txt  Alaska_admin.txt  Albania_admin.txt  American_Samoa_admin.txt  Arizona_admin.txt  Austria_admin.txt  Belarus_admin.txt  Belgium_admin.txt  Bosnia_and_Herzegovina_admin.txt  Bulgaria_admin.txt  California_admin.txt  Canada_admin.txt  Colorado_admin.txt  Connecticut_admin.txt  Croatia_admin.txt  Czech_Republic_admin.txt  Denmark_admin.txt  District_Of_Columbia_admin.txt  Estonia_admin.txt  Finland_admin.txt  Florida_admin.txt  France_admin.txt  Georgia_admin.txt  Germany_admin.txt  Gibraltar_admin.txt  Greece_admin.txt  Guam_admin.txt  Hawaii_admin.txt  Hungary_admin.txt  Iceland_admin.txt  Idaho_admin.txt  Illinois_admin.txt  Indiana_admin.txt  Ireland_admin.txt  Italy_admin.txt  Kansas_admin.txt  Kentucky_admin.txt  Kosovo_admin.txt  Latvia_admin.txt  Liechtenstein_admin.txt  (+52 more)
data/param_files/: AS_SeverityProgMeans.rds  AS_SeverityTransitionProbs.rds  SeverityICDFs.rds  p_CI_HQ_DCT.txt  p_NoInt.txt  p_PC7_CI_HQ_SD.txt  p_PC7_CI_HQ_SD_DCT.txt  preNGA_R0=2.0.txt  preUK_R0=2.0.txt  preUS_R0=2.0.txt  pre_R0=2.0.txt  support_progression.csv  support_severity.csv
data/populations/: USA_AirTravel.txt  wpop_us_terr.txt.xz
data/runners/: run_local.py
docs/: CodingStyle.md  Doxyfile.in  build.md  glossary.md  inputs-and-outputs.md  intervention-description.md  model-glossary.md  model-overview.md  paramaters-description.md  parameters-description.md  parameters.md  visual-studio-and-cmake.md  writing-google-tests.md
include/: CMakeLists.txt
include/Models/: CMakeLists.txt
include/geometry/: BoundingBox.h  CMakeLists.txt  Distance.h  Geometry.h  Size.h  Vector2.h
report9/: README.md
report9/GB_mitigation/: batch.ps1  batch.sh  p_CI.txt  p_CI_HQ.txt  p_CI_HQ_SD.txt  p_CI_HQ_SDOL70.txt  p_CI_SD.txt  p_MG.txt  p_MG_PC_CI_HQ_SDOL70.txt  p_PC.txt  p_PC_CI_HQ_SD.txt  p_PC_CI_HQ_SDOL70.txt  p_PC_CI_SD.txt  preGB_R0=2.0.txt  runonce.sh  stats_mitigation_meanT16_NR50_msvc.xlsx  stats_mitigation_meanT8_NR10.xlsx  stats_mitigation_meanT8_NR10_intel.xlsx  summariseMit.r  (+2 more)
scripts/: clang-analyze.sh  clangxx-analyze.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+81 more)
src/: .gitignore  Airport.cpp  Airport.h  BinIO.cpp  BinIO.h  Bitmap.cpp  Bitmap.h  CLI.cpp  CLI.h  CLI.hpp  CMakeLists.txt  CalcInfSusc.cpp  CalcInfSusc.h  Case.cpp  Case.h  Cell.cpp  Cell.h  Cell.hpp  Constants.h  Country.h  CovidSim.cpp  CovidSim.h  Dead.cpp  Dead.h  Dead_WasAsymp.cpp  Dead_WasAsymp.h  Dead_WasSymp.cpp  Dead_WasSymp.h  Direction.cpp  Direction.hpp  Dist.cpp  Dist.h  Error.cpp  Error.h  Files.cpp  Files.h  Household.cpp  Household.h  Household.hpp  ICDF.cpp  (+66 more)
src/Coordinates/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Location.cpp  Location.h  Location.hpp  MicroCellPosition.cpp  MicroCellPosition.h  MicroCellPosition.hpp  Size.cpp  Size.h  Size.hpp  Vector2.cpp  Vector2.h  Vector2.hpp
src/Geometry/: BoundingBox.h  CMakeLists.txt  Distance.cpp  MicroCellPosition.cpp  MicroCellPosition.h  Size.h  Vector2.cpp  Vector2.h
src/Models/: Airport.cpp  Airport.h  CMakeLists.txt  Cell.cpp  Cell.h  Household.cpp  Household.h  Microcell.cpp  Microcell.h  Person.cpp  Person.h  Place.h
src/geometry/: CMakeLists.txt
tests/: .gitattributes  .gitignore  CMakeLists.txt  integration-test.py  p_NoInt.txt  p_PC7_CI_HQ_SDbad.txt  preUK_R0=2.0.txt  regressiontest_UK_100th.checksums.txt  regressiontest_UK_100th.py  regressiontest_US_based.py  sample_admin.txt
tests/uk-input/: admin-params.txt  input-noint-params.txt  input-params.txt  pre-params.txt  results-j1.cksum  results-j2.cksum  results.checksums.txt
tests/us-input/: admin-params.txt  input-noint-params.txt  input-params.txt  pre-params.txt  results-j1.cksum  results-j2.cksum  results.checksums.txt
unit_tests/: CMakeLists.txt  test-error.cpp  test-files.cpp  test-params.cpp  test-person.cpp
unit_tests/example/: CMakeLists.txt  Example.cpp
unit_tests/geometry/: BoundingBox.cpp  CMakeLists.txt  Vector.cpp
unit_tests/noddy/: CMakeLists.txt  Holder.cpp  Noddy.cpp
unit_tests/person/: CMakeLists.txt  Person.cpp
visual_studio/: .gitignore  README.md  covid-sim.sln
(+30 files in other folders)
